Improved contact page and updated apk file on urgent call details mage

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,12 +1,49 @@
 <% provide(:title, 'Contact') %>
 
 <h1>Contact</h1>
+<div class="panel panel-primary contact-panel">
+	<div class="panel-heading">
+		Michael Marvick
+	</div>
+
+	<div class="panel-body">
+		Portland, OR, USA <br />
+		<a href="mailto:mmarvick@gmail.com">mmarvick@gmail.com</a> <br />
+		+1 (425) 681-3383
+
+		<div class="contact-icons">
+			<a href="http://www.github.com/mmarvick">
+				<img alt="GitHub" src="<%= image_path("GitHub-Mark-32px.png")%>" class="contact-icon" />
+			</a>
+
+			<a href="http://www.linkedin.com/in/mmarvick">
+				<img alt="LinkedIn" src="<%= image_path("LinkedIn-InBug-2CRev.png")%>" class="contact-icon" />
+			</a>
+
+			<a href="http://www.twitter.com/MichaelMarvick">
+				<img alt="Twitter" src="<%= image_path("Twitter_logo_blue.png")%>" class="contact-icon"/>
+			</a>			
+		</div>
+
+		<div class="contact-photo">
+			<img class="img-circle" src="https://s.gravatar.com/avatar/eafef357cb838708cb6217f90710425a?s=120" alt="Michael Marvick">
+		</div>
+
+	</div>
+</div>
+
 <p>
-	Find me on <a href="http://www.github.com/mmarvick">GitHub</a> or <a href="http://www.linkedin.com/in/mmarvick">LinkedIn</a>.
+	I'm new to the development world, and have a passion for mobile and web. Most of my learning has been self-taught or through classes online in the last year or so. I have the most experience in Android, and am currently working on pushing a project to the Play Store. It's taught me a ton about user experience, design, and writing clean and maintainable code. I'll be working on the marketing and advertising of the product soon, which is a new skill for me and I'm excited to learn more about it.
 </p>
+
 <p>
-	Email me at <a href="mailto:mmarvick@gmail.com">mmarvick@gmail.com</a>.
+	I have some experience doing front and back-end web development, but would like to get a lot more!
 </p>
+
 <p>
-	I live in the <a href="https://www.google.com/maps/place/Portland,+OR/@39.7974686,-120.545047,4z">Portland, OR</a> area in the USA. If you have an interesting project and are in the area, let me know!
+	I'm really interested in taking on new projects that stretch my abilities. I love to learn and can do so pretty quickly. Please let me know if you know of any good project or work opportunities, or if you know of any good local meetups!
+</p>
+
+<p>
+	I've been in the Portland area almost two years now. When I'm not working on a development project, you might find me biking, running, or trying to cook something new.
 </p>
