--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -25,6 +25,45 @@ link-image:active {
 	list-style-type: none;
 }
 
+
+.contact-panel {
+	float:right;
+	min-width: 300px;
+	text-align: center;
+	margin-left: 20px;
+}
+
+.contact-photo {
+	margin-top: 24px;
+}
+
+.contact-icons {
+	margin-top: 12px;
+
+	a:link {
+		text-decoration: none;
+	}
+
+	a:visited {
+		text-decoration: none;	
+	}
+
+	a:hover {
+		text-decoration: none;
+	}
+
+	a:active {
+		text-decoration: none;
+	}
+}
+
+.contact-icon {
+	width: 24px;
+	height: 24px;
+
+}
+
+
 .uc {
 
 	.well {
