--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,12 +1,10 @@
 body {
-  padding-top: 70px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 1%;
+  padding-right: 1%;
 }
 .starter-template {
 	padding-top: 20px;
  	text-align: center;
- 	//float:left
 }
 .contact-info {
 	margin-top: 20px;
