--- a/app/views/shared/_nav_bar.html.erb
+++ b/app/views/shared/_nav_bar.html.erb
@@ -1,29 +1,21 @@
 <% @navlinks = [ #{name: 'Home', url: root_url},
-				#{name: 'About', url: root_url},
 				{name: 'Portfolio', url: root_url},
+        #{name: 'About', url: about_url},
 				{name: 'Contact', url: contact_url},
         {name: 'Log Out', url: log_out_url, admin: true}
 				] %>
 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <%= link_to "Michael Marvick", root_url, class: 'navbar-brand' %>
-    </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-		<% @navlinks.each do |link| %>
+<header>
+  <%= link_to root_url, id: "logo" do %>
+    <h1> Michael Marvick </h1>
+  <% end %>
+  <nav>
+    <ul>
+    <% @navlinks.each do |link| %>
       <% if not link[:admin] or current_user %>
-			 <li <%= raw (title == link[:name] ? 'class="active"' : '') %> > <%= link_to link[:name], link[:url] %> </li>
+       <li> <%= link_to link[:name], link[:url], class: (title == link[:name] ? "selected" : "unselected") %> </li>
       <% end %>
-		<% end %>     
-      </ul>
-    </div><!--/.nav-collapse -->
-  </div>
-</div>				
+    <% end %>     
+    </ul>
+  </nav>
+</header>				
