--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,11 @@
   	<%= content_tag :div, msg, :id => "flash_#{name}" %>
   <% end %>
 
+  <div id="wrapper">
+
   <%= yield %>
+
+  </div>
 
 </body>
 </html>
