--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,53 +1,40 @@
-	<li >
-		<ul class="project well">
-			<% unless project.url.blank?%>
-			
-			<% end %>
-			<span class="project-thumb">
-				<a href="<%=project.url%>">
-					<% if project.image_url.include?('asset:') %>
-						<img alt="<%= project.title %>" src="<%= image_path(project.image_url['asset:'.length .. project.image_url.length])%>" class = "project-thumb-img" />
-					<% else %>
-						<img src= "<%= project.image_url %>" alt= "<%= project.title %>" class = "project-thumb-img" >
-					<% end %>
-				</a>
-			</span>
+	<li class="project well">
+		<span class="project-thumb">
+			<a href="<%=project.url%>">
+				<% if project.image_url.include?('asset:') %>
+					<img alt="<%= project.title %>" src="<%= image_path(project.image_url['asset:'.length .. project.image_url.length])%>" class = "project-thumb-img" />
+				<% else %>
+					<img src= "<%= project.image_url %>" alt= "<%= project.title %>" class = "project-thumb-img" >
+				<% end %>
+			</a>
+		</span>
 
-			<% unless project.url.blank?%>
-			
-			<% end %>	
-			<span class="project-body">
-				<ul class = "project-body-list">
-					<li class="project-title">
-						<% unless project.url.blank?%>
-						<a href="<%=project.url%>">
-						<% end %>	
-						<%= project.title %>		
-						<% unless project.url.blank?%>
-						</a>
-						<% end %>
-					</li>	
-					<li class="project-descrip">
-						<%= project.description %>
+		<span class="project-body">
+			<ul class = "project-body-list">
+				<li class="project-title">
+					<% unless project.url.blank?%>
+					<a href="<%=project.url%>">
+					<% end %>	
+					<%= project.title %>		
+					<% unless project.url.blank?%>
+					</a>
+					<% end %>
+				</li>	
+				<li class="project-descrip">
+					<%= project.description %>
+				</li>
+				<% unless project.source == nil or project.source.empty? %>
+					<li class="project-source">
+						<a href=<%=project.source%> class="link-image">
+						<img alt="GitHub" src="<%= image_path("GitHub-Mark-32px.png")%>" />
+						</a>							
+						<a href="<%=project.source%>">
+						View Source
+						</a>								
 					</li>
-					<% unless project.source == nil or project.source.empty? %>
-						<li class="project-source">
-							<a href=<%=project.source%> class="link-image">
-							<img alt="GitHub" src="<%= image_path("GitHub-Mark-32px.png")%>" />
-							</a>							
-							<a href="<%=project.source%>">
-							View Source
-							</a>								
-						</li>
-					<% end %>
-				</ul>
-			</span>
-
-			
-
-			
-
-		</ul>
+				<% end %>
+			</ul>
+		</span>
 
 		<% if current_user %>
 			<%= button_to "edit", edit_project_path(project), :method=> :get %>
