--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,11 +1,13 @@
 <%= provide(:title, "Portfolio") %>
-<h1>Portfolio</h1>
 
 <% @platforms.each do |platform| %>
+<section class="platform">
+
 <h3><%= platform %></h3>
 
 <ul class="projects">
 	<%= render platform_projects platform %>
 </ul>
 
+</section>
 <% end %>
