--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= javascript_include_tag 'galleria/galleria-1.3.5.min.js' %>
   <%= javascript_include_tag 'galleria/themes/classic/galleria.classic.min.js' %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 <body>
 
