--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,14 @@
 <html>
 <head>
   <title><%= full_title(yield(:title)) %></title>
+  <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= javascript_include_tag 'galleria/galleria-1.3.5.min.js' %>
   <%= javascript_include_tag 'galleria/themes/classic/galleria.classic.min.js' %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, user-scalable=no">
+
 </head>
 <body>
 
