Updating portfolio and contact pages

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -32,7 +32,7 @@
 </div>
 
 <p>
-	I'm new to the development world, and have a passion for mobile and web. Most of my learning has been self-taught or through classes online in the last year or so. I have the most experience in Android, and am currently working on pushing a project to the Play Store. It's taught me a ton about user experience, design, and writing clean and maintainable code. I'll be working on the marketing and advertising of the product soon, which is a new skill for me and I'm excited to learn more about it.
+	I'm a self-taught Android developer with a passion for mobile and web. I recently released a project to the Play Store and I've learned so much not just about coding, but about design, usability, and marketing as well. I'm in the process of launching some marketing campaigns online, and am excited to see the outcome of those!
 </p>
 
 <p>
@@ -40,7 +40,7 @@
 </p>
 
 <p>
-	I'm really interested in taking on new projects that stretch my abilities. I love to learn and can do so pretty quickly. Please let me know if you know of any good project or work opportunities, or if you know of any good local meetups!
+	I'm really interested in taking on new projects that stretch my abilities. I love to learn and do so quickly. Please let me know if you know of any good project or work opportunities, or if you know of any good local meetups!
 </p>
 
 <p>
