--- a/app/views/static_pages/project_urgent_call.html.erb
+++ b/app/views/static_pages/project_urgent_call.html.erb
@@ -47,20 +47,21 @@
 			</div>
 
 			<div class = "uc col-sm-8 project-info">
+				<div class = "project-download-play">
+					<a href="https://play.google.com/store/apps/details?id=com.mmarvick.uc_lite">
+						<img 
+							src="<%= image_path(play_store_download.png)%>"
+							alt="Download Urgent Call on Google Play"
+						>
+					</a>
+				</div>
 				<div class = "project-descrip">
 					<h3>
-						Urgent Call gives users peace of mind, allowing them to silence their phone and still receive alerts when they're needed most.
+						Urgent Call lets users silence their phone, eliminate distraction, and still be reached when needed most.
 					</h3>
 					<p>
-						Alerts are triggerable by:
+						Urgent Call allows people to put their phone into silent mode, but still receive alerts if they receive 3 calls from the same person in less than 15 minutes, or get a text message with the phrase "Urgent!" embedded in it. Alert triggers are customizable, can be filtered by contact, and users can add new alert rules to tailor the alerts to different situations.
 					</p>
-					<ul>
-
-						<li>Text messages contaning a customizable key word</li>
-						<li>Multiple repeat calls in succession</li>
-						<li>A single call from an important caller</li>
-
-					</ul>
 					<p>
 						Primary learnings from this project include:
 					</p>
@@ -81,7 +82,7 @@
 				<ul class="uc downloads simplelist">
 
 					<li>
-						<a href="https://play.google.com/store/apps/details?id=com.mmarvick.urgentcall_lite">
+						<a href="https://play.google.com/store/apps/details?id=com.mmarvick.uc_lite">
 							View on play store
 						</a>
 					</li>
@@ -91,7 +92,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="https://github.com/mmarvick/phone-alert-app/raw/master/other/apk/04_UrgentCallPro_caeb7e031b18a633ba9bf341da88db47be67cff8.apk">
+						<a href="https://github.com/mmarvick/phone-alert-app/raw/master/other/apk/UrgentCall_Stable.apk">
 						Download package file
 						</a>
 					</li>
