--- a/app/views/static_pages/project_urgent_call.html.erb
+++ b/app/views/static_pages/project_urgent_call.html.erb
@@ -62,16 +62,15 @@
 					</p>
 					<ul>
 
-						<li>Careful evaluation of tradeoffs between form and function to keep the user interface clean and simple, yet filled with enough customization to satisfy most users</li>
-						<li>Continuous design review to make the interface simpler and more intuitive based on personal intuition, observation and feedback from users, and study of the Android Design documentation</li>
-						<li>Storing preferences in lists and databases as appropriate, and storing in a way that is accessible and easy to upgrade as features are added</li>	
-						<li>Using helper functions to access preference data, making code more maintainable as data structures change</li>
-						<li>Frequent code refactorization to keep the codebase managable and maintainable</li>	
+						<li>Careful evaluation of tradeoffs between form and function to keep the user interface clean and simple, yet filled with customization to satisfy most users</li>
+						<li>Storing data in a flexible structure that makes upgrades easier</li>
+						<li>Separating the presentation of the data and user interface from the manipulation of the data</li>
+						<li>Creating custom Views to simplify code and reduce repitition</li>
+						<li>Strategic use of abstraction to prevent duplicating code between the different alert types (call and text alerts)</li>
+						<li>Frequent code refactorization and documentaton to keep the codebase managable and maintainable</li>	
+						<li>Advertising, marketing, and responding to user feedback to encourage more use of the app</li>
 					</ul>
 
-					<p>
-						Keeping a clean and simple interface was a critical concern for this project, especially since most users will rarely change the alert settings after the first time. To demo some of this progress, screenshots and package files of older iterations are included below.
-					</p>
 				</div>
 
 				<ul class="uc downloads simplelist">
