Added link to blog

--- a/app/views/shared/_nav_bar.html.erb
+++ b/app/views/shared/_nav_bar.html.erb
@@ -2,6 +2,7 @@
 				{name: 'Portfolio', url: root_url},
         #{name: 'About', url: about_url},
 				{name: 'Contact', url: contact_url},
+        {name: 'Blog', url: 'http://mmarvick.github.io/blog/'},
         {name: 'Log Out', url: log_out_url, admin: true}
 				] %>
 
