Fixed CSS that broke the header links on the UC Portfolio page. That's what I get for trying to use absolute positioning.... :)

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -32,11 +32,11 @@
 </div>
 
 <p>
-	I'm a self-taught Android developer with a passion for mobile and web. I recently released a project to the Play Store and I've learned so much not just about coding, but about design, usability, and marketing as well. I'm in the process of launching some marketing campaigns online, and am excited to see the outcome of those!
+	I'm a self-taught Android developer with a passion for mobile and web. I recently released a project to the Play Store and I've learned so much not just about programming, but about design, usability, and marketing as well. I'm in the process of launching some marketing campaigns online, and am excited to see the outcome of those!
 </p>
 
 <p>
-	I have some experience doing front and back-end web development, but would like to get a lot more!
+	I have some experience doing front and back-end web development, but would like to learn a lot more.
 </p>
 
 <p>
