Cleaned up about me

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -32,17 +32,25 @@
 </div>
 
 <p>
-	I'm a self-taught Android developer with a passion for mobile and web. I recently released a project to the Play Store and I've learned so much not just about programming, but about design, usability, and marketing as well. I'm in the process of launching some marketing campaigns online, and am excited to see the outcome of those!
+	I'm a developer and entrepeneur in the Portland area.
 </p>
 
 <p>
-	I have some experience doing front and back-end web development, but would like to learn a lot more.
+	I like making things that improve people's lives. A few areas I'm really interested in are education, health, and cooking.
 </p>
 
 <p>
-	I'm really interested in taking on new projects that stretch my abilities. I love to learn and do so quickly. Please let me know if you know of any good project or work opportunities, or if you know of any good local meetups!
+	When I'm not making stuff, I like biking and running. I'm currently training up for my first triathlon, and have found a new passion in swimming along the way!
 </p>
 
 <p>
-	I've been in the Portland area almost two years now. When I'm not working on a development project, you might find me biking, running, or trying to cook something new.
+	I teach a high school AP Computer Science class through the <a href="http://www.tealsk12.org">TEALS program</a> with a few other people.
+</p>
+
+<p>
+	I currently work at <a href="https://www.simple.com">Simple</a>. It's pretty awesome.
+</p>
+
+<p>
+	I'm always looking for cool new projects, so if you have any ideas or you want help on something, please reach out!
 </p>
