Changed routing and home page

--- a/app/views/shared/_nav_bar.html.erb
+++ b/app/views/shared/_nav_bar.html.erb
@@ -1,7 +1,8 @@
 <% @navlinks = [ #{name: 'Home', url: root_url},
-				{name: 'Portfolio', url: root_url},
+				{name: 'About Me', url: root_url},
+				{name: 'Portfolio', url: portfolio_url},
         #{name: 'About', url: about_url},
-				{name: 'Contact', url: contact_url},
+				#{name: 'Contact', url: contact_url},
         {name: 'Blog', url: 'http://mmarvick.github.io/blog/'},
         {name: 'Log Out', url: log_out_url, admin: true}
 				] %>
